; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_sock.c_nn_sock_ispeer.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_sock.c_nn_sock_ispeer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sock = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 (i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_sock_ispeer(%struct.nn_sock* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nn_sock*, align 8
  %5 = alloca i32, align 4
  store %struct.nn_sock* %0, %struct.nn_sock** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.nn_sock*, %struct.nn_sock** %4, align 8
  %7 = getelementptr inbounds %struct.nn_sock, %struct.nn_sock* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = and i32 %10, 65520
  %12 = load i32, i32* %5, align 4
  %13 = and i32 %12, 65520
  %14 = icmp ne i32 %11, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

16:                                               ; preds = %2
  %17 = load %struct.nn_sock*, %struct.nn_sock** %4, align 8
  %18 = getelementptr inbounds %struct.nn_sock, %struct.nn_sock* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32 (i32)*, i32 (i32)** %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 %21(i32 %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %16, %15
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
